k8s/home-assistant/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: http
