k8s/home-assistant/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production

    # mtls
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # FIXME: part of declarative secret management
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
spec:
  ingressClassName: nginx
  rules:
    - host: ha.k8s.jessie.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
  tls:
  - hosts:
    - ha.k8s.jessie.cafe
    secretName: home-assistant-cert
